commit #33  multi thread run